# kijito-inbox-monitor

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RELEASING.md  arm-hive-monitor.sh  com.kijito.inbox-monitor.plist  com.kijito.monitor.newsyslog.conf  com.kijito.monitor.plist  kijito_inbox_monitor.py  kijito_monitor.py  package.json  pyproject.toml  test_kijito_monitor.py
.github/workflows/: publish-npm.yml  publish-pypi.yml
docs/: DESIGN.md
